# 3D-XGuide

./: .gitignore  GettingStarted.md  LICENSE  README.md  server_model.py
src/: CMakeLists.txt  main.cxx
src/algorithms/: BiplaneFilterAlgorithmFactory.cxx  BiplaneFilterAlgorithmFactory.h  FilterAlgorithmFactory.cxx  FilterAlgorithmFactory.h
src/algorithms/filters/: BiplaneAlgorithm.cxx  BiplaneAlgorithm.h  CrosscorrelationFilter.cxx  CrosscorrelationFilter.h  CrosscorrelationMotionCorrectionFilter.cxx  CrosscorrelationMotionCorrectionFilter.h  DeepLearningMotionCorrectionFilter.cxx  DeepLearningMotionCorrectionFilter.h  GenericMotionCorrectionFilter.cxx  GenericMotionCorrectionFilter.h  MotionCorrectionFilter.cxx  MotionCorrectionFilter.h  MotionTrackingFilter.cxx  MotionTrackingFilter.h  PointListBasedFilter.cxx  PointListBasedFilter.h  SimpleBiplaneFilter.cxx  SimpleBiplaneFilter.h
src/algorithms/gui/: AbstractFilterWidget.cxx  AbstractFilterWidget.h  CrosscorrelationFilterWidget.cxx  CrosscorrelationFilterWidget.h  CrosscorrelationFilterWidget.ui  DLFilterWidget.cxx  DLFilterWidget.h  DLFilterWidget.ui  MotionCorrectionFilterWidget.cxx  MotionCorrectionFilterWidget.h  MotionCorrectionFilterWidget.ui  PreprocessingFilterWidget.cxx  PreprocessingFilterWidget.h  PreprocessingFilterWidget.ui
src/geometry/: BiplaneGeometry.cxx  BiplaneGeometry.h  Panel.cxx  Panel.h  SystemGeometryDefinitions.cxx  SystemGeometryDefinitions.h  XRayGeometry.cxx  XRayGeometry.h
src/gui/: AlgorithmPropertiesDialog.cxx  AlgorithmPropertiesDialog.h  AlgorithmPropertiesDialog.ui  MPRViewer.cxx  MPRViewer.h  MPRViewer.ui  MPRViewerIcons.qrc  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeshesDialog.cpp  MeshesDialog.h  MeshesDialog.ui  UsageDialog.ui  XRayViewer.cpp  XRayViewer.h  XRayViewer.ui
src/interaction/: MoveMeshInteractionCommand.cxx  MoveMeshInteractionCommand.h  SceneLabeling.cxx  SceneLabeling.h  vktInteractorStyleTrackballJoystickHybridActor.cxx  vktInteractorStyleTrackballJoystickHybridActor.h  vtkInteractorStyle2DRotateZoomWithViewAngle.h  vtkInteractorStyleMy2D.cxx  vtkInteractorStyleMy2D.h  vtkInteractorStyleOnlyZoomWithViewAngle.h
src/pipeline/: DICOMVisualizer.cxx  DICOMVisualizer.h  OverlayScene.cxx  OverlayScene.h  XRAYReader.cxx  XRAYReader.h
